--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,7 +95,7 @@ services:
       DB_USER: ${EXTERNAL_POSTGRES_USER:-docker}
       DB_PASSWORD: ${EXTERNAL_POSTGRES_PASSWORD:-docker}
       DB_NAME: ${EXTERNAL_POSTGRES_DATABASE:-resin}
-      DELTA_HOST: delta.${TLD_HOST}
+      DELTA_HOST: delta.${DNS_TLD}
       HOSTS_CONFIG: API_HOST:api,DB_HOST:${EXTERNAL_POSTGRES_HOST:-db},DELTA_HOST:delta,HOST:api,REDIS_HOST:redis,TOKEN_AUTH_CERT_ISSUER:api,VPN_HOST:cloudlink,REGISTRY2_HOST:registry2
       IMAGE_STORAGE_BUCKET: resin-production-img-cloudformation
       IMAGE_STORAGE_ENDPOINT: ${EXTERNAL_S3_ENDPOINT:-s3.amazonaws.com}
